--- a/RayTracerSmall/RayTracerSmall.vcxproj
+++ b/RayTracerSmall/RayTracerSmall.vcxproj
@@ -144,13 +144,13 @@
   <ItemGroup>
     <ClCompile Include="GlobalController.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MemoryPool.cpp" />
+    <ClCompile Include="Pool.cpp" />
     <ClCompile Include="RayTracer.cpp" />
     <ClCompile Include="Tracker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlobalController.h" />
-    <ClInclude Include="MemoryPool.h" />
+    <ClInclude Include="Pool.h" />
     <ClInclude Include="RayTracer.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="Tracker.h" />
